tests/machine/x/c/two-sum.error
line: 0
error: output mismatch
-- got --
2.486713817537428e-316
2.486713817537428e-316
-- want --
0
1
   1: #include <stdio.h>
